--- a/examples/quotes/www/index.html
+++ b/examples/quotes/www/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Live Quotes</title>
-  <script type="module" defer src="https://cdn.jsdelivr.net/npm/@sudodevnull/datastar"></script>
+  <script type="module" src="https://cdn.jsdelivr.net/gh/starfederation/datastar@1.0.0-RC.6/bundles/datastar.js"></script>
   <style>
     body { font-family: system-ui; max-width: 600px; margin: 2rem auto; padding: 0 1rem; }
     #quote { font-size: 1.5rem; font-style: italic; margin: 2rem 0; }
