--- a/examples/quotes/www/index.html
+++ b/examples/quotes/www/index.html
@@ -10,7 +10,7 @@
     .who { text-align: right; color: #666; }
   </style>
 </head>
-<body data-on-load="$$get('/stream')">
+<body data-init="@get('/stream')">
   <h1>Live Quotes</h1>
   <div id="quote">Waiting for quotes...</div>
 </body>
